# perf

./: README.md  pyproject.toml
backend/: Dockerfile-WIP  ceph_operations.py  config.py  perfomance.py
backend/auth/: cephadmin.py
frontend/: Dockerfile-WIP  app_local.py  auth.env  requirements.txt
src/perf/: __init__.py  agent.py
src/perf/backend/: requirements.txt
src/perf/backend/auth/: auth.py
src/perf/frontend/: app.py  app_watsonx.py
