[project]
name = "perf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "argparse>=1.4.0",
    "bcrypt>=4.3.0",
    "huggingface-hub>=0.30.2",
    "langchain>=0.3.25",
    "langchain-huggingface>=0.1.2",
    "paramiko>=3.5.1",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
